--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>HARDSTUCK PLAT 4HEAD</title>
-<link rel="stylesheet" href="Style/projects.css">
+<link rel="stylesheet" href="Style/project.css">
 </head>
 <body>
 <nav>
