Made image links relative

--- a/projects.html
+++ b/projects.html
@@ -11,25 +11,25 @@
   <button><a href="contact.html">Twomad's Discord</a></button>
 </nav>
 <div class="wrapper">
-  <div class="one"><img src="file:///C:/Users/SMASH%20Scholar/Desktop/assets/photo1.jpg">
+  <div class="one"><img src="assets/photo1.jpg">
   </div>
-  <div class="two"><img src="file:///C:/Users/SMASH%20Scholar/Desktop/assets/photo2.jpg">
+  <div class="two"><img src="assets/photo2.jpg">
   </div>
-  <div class="three"><img src="file:///C:/Users/SMASH%20Scholar/Desktop/assets/photo3.jpg">
+  <div class="three"><img src="assets/photo3.jpg">
   </div>
-  <div class="four"><img src="file:///C:/Users/SMASH%20Scholar/Desktop/assets/photo4.png">
+  <div class="four"><img src="assets/photo4.png">
   </div>
-  <div class="five"><img src="file:///C:/Users/SMASH%20Scholar/Desktop/assets/photo5.png">
+  <div class="five"><img src="assets/photo5.png">
   </div>
-  <div class="six"><img src="file:///C:/Users/SMASH%20Scholar/Desktop/assets/photo6.png">
+  <div class="six"><img src="assets/photo6.png">
   </div>
-  <div class="seven"><img src="file:///C:/Users/SMASH%20Scholar/Desktop/assets/photo7.jpg">
+  <div class="seven"><img src="assets/photo7.jpg">
   </div>
-  <div class="eight"><img src="file:///C:/Users/SMASH%20Scholar/Desktop/assets/photo8.gif">
+  <div class="eight"><img src="assets/photo8.gif">
   </div>
-  <div class="nine"><img src="file:///C:/Users/SMASH%20Scholar/Desktop/assets/photo9.png">
+  <div class="nine"><img src="assets/photo9.png">
   </div>
-  <div class="ten"><img src="file:///C:/Users/SMASH%20Scholar/Desktop/assets/photo10.png">
+  <div class="ten"><img src="assets/photo10.png">
   </div>
 </body>
 </html>
