--- a/Computer Science Portfolio/resume.html
+++ b/Computer Science Portfolio/resume.html
@@ -14,5 +14,5 @@
 </nav>
 
 <center>
-<iframe src="assets/resume.pdf" width="1000px" height="650px"></iframe>
+<iframe src="assets/Resume.pdf" width="1000px" height="650px"></iframe>
 </center>
